tests/endtoend/failure/expected/function_without_return.compile.out
function_without_return.silly: In function ‘blah’:
function_without_return.silly:8:1: error: Function must have a RETURN statement
    8 | };
      | ^
